[gd_scene load_steps=15 format=3 uid="uid://daxayrdfcvuwl"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_p7c7q"]
[ext_resource type="PackedScene" uid="uid://13uox2muyeih" path="res://Scenes/player.tscn" id="2_jjsqr"]
[ext_resource type="PackedScene" uid="uid://dqxu6g58qey8x" path="res://Scenes/wall.tscn" id="3_t0dvj"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="4_hys6y"]
[ext_resource type="PackedScene" uid="uid://bb3p28y7ism03" path="res://Scenes/bg.tscn" id="5_7v8oy"]
[ext_resource type="PackedScene" uid="uid://2b4mqmpiovua" path="res://Scenes/death_window.tscn" id="6_3ehi2"]
[ext_resource type="PackedScene" uid="uid://b7fpb26vjyjy" path="res://Scenes/victory_window.tscn" id="7_ig5rj"]
[ext_resource type="PackedScene" uid="uid://cbi03tnxasr6m" path="res://Scenes/start_window.tscn" id="8_uxjwh"]
[ext_resource type="Texture2D" uid="uid://dm7yn3pa6vduy" path="res://assets_and_referens/showflaces1.png" id="9_5htbl"]

[sub_resource type="LabelSettings" id="LabelSettings_00hvs"]
font_size = 65
font_color = Color(0.980392, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjoqs"]
bg_color = Color(0.19921, 0.428185, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4an3a"]
bg_color = Color(0.327928, 0, 0.0831342, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vw4rw"]
bg_color = Color(0.688615, 0.411032, 0.0376995, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1h4c"]
bg_color = Color(0.129801, 0.474017, 2.59906e-06, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TestMain" type="Node2D"]
script = ExtResource("1_p7c7q")

[node name="Player" parent="." instance=ExtResource("2_jjsqr")]
position = Vector2(407, 583)

[node name="Walls" type="Node2D" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource("3_t0dvj")]
position = Vector2(-4, 64)
scale = Vector2(1, 1.42)

[node name="Wall2" parent="Walls" instance=ExtResource("3_t0dvj")]
position = Vector2(804, 64)
scale = Vector2(1, 1.42)

[node name="Wall3" parent="Walls" instance=ExtResource("3_t0dvj")]
position = Vector2(721, -5)
rotation = 1.5708
scale = Vector2(1, 1.88)

[node name="DownWall" parent="Walls" instance=ExtResource("3_t0dvj")]
position = Vector2(721, 604)
rotation = 1.5708
scale = Vector2(1, 1.88)

[node name="ShakeCamera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_hys6y")

[node name="BG" parent="UI" instance=ExtResource("5_7v8oy")]
metadata/_edit_lock_ = true

[node name="Health" type="Label" parent="UI"]
unique_name_in_owner = true
offset_right = 78.0
offset_bottom = 70.0
text = "3/3"
label_settings = SubResource("LabelSettings_00hvs")
metadata/_edit_lock_ = true

[node name="BarBeforeSlowing" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
offset_top = 446.785
offset_right = 216.0
offset_bottom = 473.785
rotation = -1.5708
scale = Vector2(1.265, 1.265)
theme_override_styles/background = SubResource("StyleBoxFlat_vjoqs")
theme_override_styles/fill = SubResource("StyleBoxFlat_4an3a")
step = 0.001
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="TimerToShift" type="Timer" parent="UI"]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[node name="PressShift" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.552941)
offset_left = 265.0
offset_top = 227.0
offset_right = 552.0
offset_bottom = 297.0
text = "Press Shift!"
label_settings = SubResource("LabelSettings_00hvs")
metadata/_edit_lock_ = true

[node name="ShiftCounterBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
offset_left = 766.0
offset_top = 456.0
offset_right = 982.0
offset_bottom = 483.0
rotation = -1.5708
scale = Vector2(1.265, 1.265)
theme_override_styles/background = SubResource("StyleBoxFlat_vw4rw")
theme_override_styles/fill = SubResource("StyleBoxFlat_u1h4c")
max_value = 10.0
step = 1.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="DeathWindow" parent="UI" instance=ExtResource("6_3ehi2")]
unique_name_in_owner = true
visible = false
offset_left = -198.5
offset_right = 198.5

[node name="VictoryWindow" parent="UI" instance=ExtResource("7_ig5rj")]
unique_name_in_owner = true
visible = false

[node name="StartWindow" parent="UI" instance=ExtResource("8_uxjwh")]
unique_name_in_owner = true
visible = false

[node name="Snowflokes" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Showflaces1" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(416, 522)
texture = ExtResource("9_5htbl")
